# andromeda-transfer-direct-mini

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/client/: mod.rs
src/server/: mod.rs
